fix: set cursor from none to initial value on mobile :lipstick:

--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -105,6 +105,10 @@
 }
 
 @media (max-width: 769px) {
+  *, *::before, *::after {
+    cursor: initial;
+  }
+
   .cursor {
     display: none;
   }
